Consider `owner` flag when retrieving/invalidating keys with API key service (#45421)
Actual invocation of API key service now takes `owner` flag from the
request into consideration by setting the values for `realm` and
`username` as per the current authentication before invoking API key service.
This allows for retrieving or invalidating API keys owned by the current
authenticated user.

Relates: #40031